# detect-the-copycat

./: README.md  index.html  launch.sh  project_structure.md
backend/: CMakeLists.txt  README.md
backend/include/: plagiarism_detector.h  server.h  text_processing.h
backend/src/: main.cpp  plagiarism_detector.cpp  server.cpp  text_processing.cpp
frontend/: package.json
frontend/src/components/: FileUpload.tsx
frontend/src/pages/: Index.tsx
frontend/src/utils/: apiClient.ts
src/: index.css
src/components/: ComparisonResults.tsx  FileUpload.tsx  Header.tsx  TextPreview.tsx
src/pages/: Index.tsx
src/utils/: plagiarismUtils.ts  textProcessing.ts
